...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_background"
    android:id="@+id/loginWindow"
    tools:context=".loginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
...
            android:textStyle="bold"
            android:windowSoftInputMode="adjustResize">

        </TextView>

        <EditText
            android:id="@+id/userName_Input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/keepitall_clickbox"
            android:drawableLeft="@drawable/user_icon"
            android:drawablePadding="8dp"
            android:hint="Username"
...
            android:textColor="@color/black"
            android:textColorHint="@color/black">

        </EditText>

        <EditText
            android:id="@+id/password_Input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/keepitall_clickbox"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="8dp"
            android:hint="password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"></EditText>

        <Button
            android:id="@+id/login_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Login"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"></Button>

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="1dp"
            android:text="@string/need_an_account"
            android:textAlignment="gravity"
...
