...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <EditText
        android:id="@+id/searchText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="95dp"
        android:autofillHints="name"
...
